--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,8 +1,9 @@
 ﻿body {
   background-color: black;
-  height: 100vh;
   display: grid;
   place-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 .card-groups,
@@ -10,6 +11,7 @@
 .card {
   aspect-ratio: 5 / 7;
 }
+
 .card-groups,
 .card-group,
 .big-card {  
@@ -31,41 +33,42 @@
 }
 
 .card-group[data-status="after"] {
-  transform: translateX(50%) scale(0);
+  transform: translateX(75%) scale(0) rotate(25deg);
 }
 
 .card-group[data-status="before"] {
-  transform: translateX(-50%) scale(0);
+  transform: translateX(-75%) scale(0) rotate(-25deg);
 }
 
 .card-group[data-status="becoming-active-from-after"] {
-  transform: translateX(50%) scale(0);
+  transform: translateX(75%) scale(0) rotate(25deg);
   transition: none;
 }
 
 .card-group[data-status="becoming-active-from-before"] {
-  transform: translateX(-50%) scale(0);
+  transform: translateX(-75%) scale(0) rotate(-25deg);
   transition: none;
 }
 
 .card {
-  transition: transform 800ms cubic-bezier(.05, .43, .25, .95);
+  transition: transform 600ms cubic-bezier(.05, .43, .25, .95);
   position: absolute;
   background-size: cover;
   background-position: center;
 }
 
 .big-card {
-  border-radius: 1vmin;
+  border-radius: 3vmin;
   width: 30vmin;
   z-index: 1;
 }
 
 .little-card {
-    box-shadow: -1vmin 1vmin 2vmin rgba(0, 0, 0, 0.25);
-  width: 12vmin;
-  border-radius: 2vmin;
+  box-shadow: -1vmin 1vmin 2vmin rgba(0, 0, 0, 0.25);
+  width: 13vmin;
+  border-radius: 2.5vmin;
   transform: translate(75%, 75%);
+  transition-duration: 700ms;
 }
 
 .big-card:nth-child(1) {
@@ -100,24 +103,22 @@
    transform: translate(80%, 10%) rotate(20deg);
 }
 
-.card-group:hover .little-card {
-  z-index: 2;
-}
-
 .card-group:hover .little-card:nth-child(5) {
-   transform: translate(-150%, -50%) rotate(7deg);
+   z-index: 2;
+   transform: translate(-125%, -50%) rotate(10deg);
 }
 
 .card-group:hover .little-card:nth-child(6) {
-   transform: translate(-200%, 250%) rotate(-7.5deg);
+   z-index: 2;
+   transform: translate(-175%, 240%) rotate(-10deg);
 }
 
 .card-group:hover .little-card:nth-child(7) {
-   transform: translate(350%, -30%) rotate(-5deg);
+   transform: translate(340%, -45%) rotate(-15deg);
 }
 
 .card-group:hover .little-card:nth-child(8) {
-   transform: translate(300%, 255%) rotate(15deg);
+   transform: translate(280%, 260%) rotate(10deg);
 }
 
 #card-swiper-buttons {
@@ -137,7 +138,7 @@
   display: grid;
   place-items: center;
   cursor: pointer;
-  margin: 10px;
+  margin-left: 7.5vmin;
   transition: width 300ms, height 300ms;
   transform: translate(200%);
   color: white;
@@ -147,5 +148,4 @@
 #card-swiper-buttons > button:hover {
   box-shadow: 0 0 10px rgb(200, 200, 200); 
 }
-
 
