--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -32,18 +32,21 @@
 
 .text-group {
     position: absolute;
+    left: 10%;
+    top: 20%;
     font-family: Consolas;
     line-height: 15px;
+    max-width: 750px;
     font-weight: bold;
-    left: 15%;
-    top: 20%;
     font-size: var(--font-size);
     color: transparent;
+    transition: color 350ms;
 }
 
 .text:first-child {
     font-size: 35px;
 }
+
 
 #card-content {
     transform: translate(80%, -10%);
@@ -105,7 +108,6 @@
     transition-delay: 300ms;
     color: white;
 }
-
 
 
 .card {
